--- a/dogNoticeboard/src/main/webapp/WEB-INF/web.xml
+++ b/dogNoticeboard/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,15 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <!-- MultipartFilter 적용 --> 
+  <filter> 
+  <filter-name>MultipartFilter</filter-name> 
+	  <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class> 
+	  </filter> 
+  <filter-mapping> 
+	  <filter-name>MultipartFilter</filter-name> 
+	  <url-pattern>/*</url-pattern> 
+  </filter-mapping>
+
 </web-app>
